# discord-python

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  docker-image.yml  isort.yml  pull_request_template.md  pytest.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hacksquad_bot/: internal_commands.py  main.py  utils.py
hacksquad_bot/cogs/hacksquad/: __init__.py  core.py  menu.py  utils.py
hacksquad_bot/config/: __init__.py  bot_config.py
hacksquad_bot/utils/: objects.py
hacksquad_discordpy/: main.py
hacksquad_discordpy/objects/: Team.py  User.py
hacksquad_discordpy/wrappers/: api_thingies.py  constants.py  leaderboard.py  team.py
tests/: test_hacksquad_discordpy.py
