[tool.poetry]
name = "hacksquad-bot"
version = "0.1.0"
description = ""
authors = ["HellFire <hellfire@example.com>", "sravan <sravan@example.com>", "Julien Mauroy <pro.julien.mauroy@gmail.com>"]
maintainers = ["HellFire <hellfire@example.com>", "sravan <sravan@example.com>", "Julien Mauroy <pro.julien.mauroy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.1"
jishaku = "^2.5.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
