[tool.poetry]
name = "hacksquad-bot"
version = "0.1.0"
description = ""
authors = ["HellFire <hellfire@example.com>", "sravan <sravan@example.com>", "Julien Mauroy <pro.julien.mauroy@gmail.com>"]
maintainers = ["HellFire <hellfire@example.com>", "sravan <sravan@example.com>", "Julien Mauroy <pro.julien.mauroy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jishaku = "^2.5.1"
aiohttp = "^3.8.3"
typing-extensions = "^4.3.0"
tabulate = "^0.8.10"
python-dateutil = "^2.8.2"
discord-py = {git = "https://github.com/ForksOfPred/discord.py", rev = "feat-has-app-error-handler"}
rapidfuzz = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.21.0"
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
